@@ -1,7 +1,6 @@
 package nl.novi.fsdbe.controller;
 
 import nl.novi.fsdbe.model.Employee;
-import nl.novi.fsdbe.model.Planning;
 import nl.novi.fsdbe.security.JwtUtil;
 import nl.novi.fsdbe.service.*;
 import org.junit.jupiter.api.Test;
@@ -17,11 +16,9 @@ import org.springframework.test.web.servlet.MockMvc;
 import static org.hamcrest.Matchers.is;
 
 import javax.sql.DataSource;
-import java.util.Arrays;
 import java.util.List;
 
 import static org.hamcrest.Matchers.hasSize;
-import static org.hamcrest.Matchers.is;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
@@ -29,7 +26,7 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
     @WebMvcTest
     @ContextConfiguration
     @EnableConfigurationProperties
-    @WithMockUser(username = "user", roles = {"USER"})
+    @WithMockUser(username = "user")
     public class EmployeeControllerIntegrationTest {
 
         @Autowired
@@ -76,7 +73,7 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
             employee.setFunctionName("Verpleger");
             employee.setEnabled(true);
 
-            List<Employee> allEmployees = Arrays.asList(employee);
+            List<Employee> allEmployees = List.of(employee);
 
             BDDMockito.given(employeeService.getEmployees()).willReturn(allEmployees);
 
